# SmashClone

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SmashClone  imgui.ini
app/: CMakeLists.txt
app/include/: animation.h  attack.h  collisions.h  game.h  input.h  player.h  raylib.h  states.h
app/src/: animation.cpp  attack.cpp  game.cpp  input.cpp  main.cpp  player.cpp  states.cpp
assets/attributes/: animation.json  player_animation_data.json
cmake/: cpm.cmake
controller_mappings/: gamecontrollerdb.txt
